# rmk-gui

./: .gitignore  CHANGELOG.md  CNAME  nuxt.config.ts  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: build-publish.yml  build-test.yml
app/: app.vue
app/assets/: main.css
app/components/common/: Key.vue  Keyboard.vue  KeycodeEditor.vue  KeycodeSuggestions.vue  MapperDialog.vue  MapperPanel.vue
app/components/layout/: Aside.vue
app/components/macros/: MacrosList.vue
app/components/settings/: PowerSaving.vue  Theme.vue
app/pages/: combos.vue  export.vue  keymap.vue  layout.vue  lighting.vue  macros.vue  power-saving.vue  tap-dance.vue
app/plugins/: wasm.client.ts
app/stores/: keyboard.ts  pageMacros.ts
app/types/: constants.ts  hid.ts  keycode.ts  macros.ts  vial.ts
app/utils/: hid.ts  qmkKeycodes.ts  vial.ts
codegen/: extkey.py  gen.py  lib.py  symbol.py
i18n/locales/: en.json  zh.json
script/: vercel-install.sh
src-tauri/: Cargo.toml
src-tauri/src/: cmds.rs  lib.rs  utils.rs
wasm/: Cargo.toml
wasm/src/: keyinfo.rs  keymap.rs  lib.rs  prefix.rs  rpc.rs  types.rs
