[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
js-sys = "0.3.78"
postcard = { version = "1.1.3", features = ["use-std"] }
rmk-types = "0.1.0"
serde = "1.0.225"
strum = "0.27.2"
tsify = "0.5.5"
wasm-bindgen = "0.2.101"

[profile.release]
opt-level = 's'
